<resources>
    <string name="app_name">EmploYeah!</string>
    <string name="action_settings">Settings</string>
    <string name="EmploYeah">Nom Action bar</string>
    <string name="Choose">Choisissez</string>
    <string name="day">Jour</string>
    <string name="week">Semaine</string>
    <string name="month">Mois</string>
    <string name="choose">Choisissez</string>
    <string name="jours">jours</string>
    <string name="click_here">click ici</string>
    <string name="clear">Vider</string>
    <string name="cancel">Annuler</string>
    <string name="validate">Valider</string>
    <string name="complete">Compléter</string>
    <string name="overwrite">écraser</string>
    <string name="ok">ok</string>
    <string name="sunday">DIM</string>
    <string name="saturday">SAM</string>
    <string name="friday">VEN</string>
    <string name="jeu">JEU</string>
    <string name="wednesday">MER</string>
    <string name="tuesday">MAR</string>
    <string name="monday">LUN</string>
    <string name="employeah">EmploYeah!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="wrong_login_message">login ou mot de passe vide</string>
    <string name="login_fail_message">Login failed</string>
    <string name="auth_message">Authenticating...</string>
    <string name="database_error_message">error cannot copy Database</string>
    <string name="initialization_message">Initalisation</string>
    <string name="server_error_message">Server Error try later</string>

    <drawable name="icon_sliding">@drawable/ic_action_view_as_list</drawable>
    <string-array name="spinner_list">
        <item>@string/Choose</item>
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/month</item>
    </string-array>
</resources>
